--- a/src/components/Catalog/Filters/Filters.module.css
+++ b/src/components/Catalog/Filters/Filters.module.css
@@ -1,2 +1,70 @@
 .filters {
+  display: flex;
+  align-items: flex-end; /* лейбли зверху, поля рівно в ряд */
+  gap: 16px;
+  max-width: 924px;
+  margin: 0 auto 56px;
+}
+
+/* Лейбл + поле */
+.labelInput {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.mileageLabel {
+  font-family: "Manrope", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33333;
+  color: #8d929a;
+}
+
+/* Mileage (From-To) */
+.mileage {
+  display: flex;
+  align-items: center;
+  border: 1px solid #dadde1;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.mileage input {
+  flex: 1;
+  width: 160px;
+  border: none;
+  outline: none;
+  height: 44px;
+  padding: 0 12px;
+  font-size: 16px;
+  font-family: "Manrope", sans-serif;
+  background: #f7f7f7;
+}
+
+.mileage input:first-child {
+  border-right: 1px solid #d9d9d9;
+}
+
+/* Кнопка */
+.button {
+  height: 48px;
+  min-width: 156px; /* додамо фіксовану ширину, щоб не була коротка */
+  display: flex; /* щоб текст рівно ставав */
+  align-items: center;
+  justify-content: center;
+  padding: 12px 51px;
+  border: none;
+  border-radius: 12px;
+  background-color: #3470ff;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Manrope", sans-serif;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.button:hover {
+  background-color: #2557d6;
 }
